<resources>
    <string name="app_name">Qalby</string>
    <string name="bulletin">Bulletin</string>
    <string name="solah">Solah</string>
    <string name="home">Home</string>
    <string name="dua">Dua</string>
    <string name="more">More</string>
    <string name="next_prayer">Next prayer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="i_agree">I agree with the terms and conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_in_with">OR sign in with</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="sign_in">sign In</string>
    <string name="azan">Azan</string>
    <string name="silent">Silent</string>
    <string name="faizal_tahir">Faizal Tahir</string>
    <string name="settings">Settings</string>
    <string name="fajr">Fajr</string>
    <string name="sunless">Settings</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="imsak">Imsak</string>
    <string name="isha">Isha</string>
    <string name="maghrib">Maghrib</string>
    <string name="sunset">Sunset</string>
    <string name="long_text">Glory be to Allah, and praise be to Him to the extent of the number of His creation and to the extent of His pleasure and to the extent of the weight of His Throne and to the extent of the ink of His words.(Recite thrice in the morning)</string>
    <string name="long_text_ar">سُبْحَانَ اللّٰهِ وَبِحَمْدِهِ عَدَدَ خَلْقِهِ وَرِضَا نَفْسِهِ وَزِنَةَ عَرْشِهِ وَمِدَادَ كَلِمَاتِهِ (3x)\n</string>
    <string name="location">Location</string>
    <string name="state">State</string>
    <string name="muezzin">Default muezzin</string>
    <string name="calculation">calculation method</string>
    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>
    <string name="enter_location_name">Enter location name</string>
    <string name="use_my_location">Use my location</string>
    <string name="save">Save</string>
    <string name="qibla">Qibla</string>

</resources>