<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/location"
            android:textAlignment="center"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/primary"
            android:layout_margin="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txtLocation"
            android:layout_margin="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_location_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUse"
            android:layout_margin="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:backgroundTint="@color/secondary"
            android:text="@string/use_my_location"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_margin="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:text="@string/save"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp" />

    </LinearLayout>
</layout>