<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="duaRequest"
            type="com.ps.omarmattr.qalby.model.dua.DuaRequestItem" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/duaAR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:gravity="center_horizontal"
            android:text="@{duaRequest.ayat}"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/long_text_ar" />


        <TextView
            android:id="@+id/duaEN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:gravity="center"
            android:text="@{duaRequest.translation}"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duaAR"
            tools:text="@string/long_text" />

        <TextView
            android:id="@+id/txtRef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:gravity="center"
            android:text="@{'['+duaRequest.source+']'}"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duaEN"
            tools:text="@string/confirm_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>